; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fast-export.c_parse_opt_reencode_mode.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fast-export.c_parse_opt_reencode_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { i32 }

@REENCODE_ABORT = common dso_local global i32 0, align 4
@reencode_mode = common dso_local global i32 0, align 4
@REENCODE_NO = common dso_local global i32 0, align 4
@REENCODE_YES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"abort\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"Unknown reencoding mode: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @parse_opt_reencode_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_opt_reencode_mode(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.option*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.option* %0, %struct.option** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = load i32, i32* @REENCODE_ABORT, align 4
  store i32 %11, i32* @reencode_mode, align 4
  store i32 0, i32* %4, align 4
  br label %30

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @git_parse_maybe_bool(i8* %13)
  switch i32 %14, label %19 [
    i32 0, label %15
    i32 1, label %17
  ]

15:                                               ; preds = %12
  %16 = load i32, i32* @REENCODE_NO, align 4
  store i32 %16, i32* @reencode_mode, align 4
  br label %29

17:                                               ; preds = %12
  %18 = load i32, i32* @REENCODE_YES, align 4
  store i32 %18, i32* @reencode_mode, align 4
  br label %29

19:                                               ; preds = %12
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @strcasecmp(i8* %20, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %25, label %23

23:                                               ; preds = %19
  %24 = load i32, i32* @REENCODE_ABORT, align 4
  store i32 %24, i32* @reencode_mode, align 4
  br label %28

25:                                               ; preds = %19
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @error(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i8* %26)
  store i32 %27, i32* %4, align 4
  br label %30

28:                                               ; preds = %23
  br label %29

29:                                               ; preds = %28, %17, %15
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %29, %25, %10
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @git_parse_maybe_bool(i8*) #1

declare dso_local i32 @strcasecmp(i8*, i8*) #1

declare dso_local i32 @error(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
